--- a/클래스_guide.ipynb
+++ b/클래스_guide.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "0542d68b",
+   "id": "12c81438",
    "metadata": {},
    "source": [
     "클래스\n",
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "526a04d4",
+   "id": "ee3a3c5f",
    "metadata": {},
    "outputs": [
     {
@@ -62,7 +62,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "8c223f2f",
+   "id": "b4a7e62a",
    "metadata": {},
    "outputs": [
     {
@@ -99,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "5aa5b61e",
+   "id": "11ce4737",
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +128,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "00a5abc4",
+   "id": "164749d6",
    "metadata": {},
    "outputs": [
     {
@@ -154,7 +154,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "f23bffcd",
+   "id": "3ae2d3f3",
    "metadata": {},
    "outputs": [
     {
@@ -179,7 +179,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "f9eb42a4",
+   "id": "7b532ee6",
    "metadata": {},
    "outputs": [
     {
@@ -203,7 +203,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f38074a6",
+   "id": "f17ece5a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,7 +217,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "d6758424",
+   "id": "56210c4c",
    "metadata": {},
    "outputs": [
     {
@@ -254,7 +254,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "abdfb60c",
+   "id": "88ad9b8a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,7 +266,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "c33f2393",
+   "id": "6c7cff07",
    "metadata": {},
    "outputs": [
     {
@@ -302,7 +302,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "c38ac525",
+   "id": "06b7e466",
    "metadata": {},
    "outputs": [
     {
@@ -329,7 +329,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "acea696a",
+   "id": "5c293ecd",
    "metadata": {},
    "outputs": [
     {
@@ -355,7 +355,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "ebf07f1a",
+   "id": "2d1aef28",
    "metadata": {},
    "outputs": [
     {
@@ -380,7 +380,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4c1e7081",
+   "id": "fa351d47",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -391,7 +391,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7e9f3698",
+   "id": "5e1b53be",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -404,7 +404,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ac066855",
+   "id": "9455dae6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -414,7 +414,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18538210",
+   "id": "2bb73493",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -425,7 +425,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a71f905d",
+   "id": "6be5533c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -436,10 +436,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "9eda8a62",
+   "execution_count": 30,
+   "id": "1ffdde4a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1000\n"
+     ]
+    }
+   ],
    "source": [
     "# Q6. Order 클래스를 상속받아 extraOrder 클래스를 작성하고 extraCustomer의 \n",
     "# 주문가격을 다음과 같이 산출하였다. \n",
@@ -456,14 +464,14 @@
     "class ExtraOrder(Order): \n",
     "    pass \n",
     "\n",
-    "extraCustomer = extraOrder('kevin') \n",
+    "extraCustomer = ExtraOrder('kevin') \n",
     "print(extraCustomer.order(1000))\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "30f701fe",
+   "id": "a02990c1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -474,7 +482,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "30e27e6a",
+   "id": "ae51331d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -486,7 +494,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a9db32ad",
+   "id": "b61558c3",
    "metadata": {},
    "source": [
     "날짜/시간"
@@ -495,7 +503,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f438d86b",
+   "id": "220a29b2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -505,7 +513,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "225c776c",
+   "id": "cd53e0eb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -515,7 +523,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cba0a66e",
+   "id": "3d66e0ca",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -525,7 +533,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9ecf9e2a",
+   "id": "4bdf37e0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -535,7 +543,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fc97f034",
+   "id": "47901465",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -545,12 +553,27 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7b7ecd09",
+   "id": "6af45683",
    "metadata": {},
    "outputs": [],
    "source": [
     "# 1000 밀리초(ms) = 1초\n",
     "# Q6. 1에서 백만까지 더하는데 걸리는 프로그램 실행 시간을 밀리초(ms) 단위로 구하세요."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "20d6f512",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 보너스 문제\n",
+    "name = ['고영남', '김광훈', '김동일', '김진', '박기범', '박민아', '박시우', '배송이', '송유빈', '신인철',\n",
+    "       '양인석','오수문','우동주','이덕재','이민찬','이범준','이슬','이원진','이종현','임희진',\n",
+    "       '정하림','조경림','조현정','진유훈','채승혜','최윤진','최한결','최혜정','하도원','안아름']\n",
+    "# Q. 발표할 인원을 입력하면 랜덤으로 발표자를 리스트로 출력해주는 프로그램을 \n",
+    "# 작성하세요.(중복 허용하지 않음)"
    ]
   }
  ],
