--- a/web_crawling_기초_guide.ipynb
+++ b/web_crawling_기초_guide.ipynb
@@ -12158,7 +12158,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "09c86a18",
+   "id": "f3d6dd12",
    "metadata": {},
    "outputs": [
     {
@@ -12185,7 +12185,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Q. 네이버 영화 랭킹 가져와서 첫번째 영화제목을 출력하세요."
+    "# Q1. 네이버 영화 랭킹 가져와서 첫번째 영화제목을 출력하세요."
    ]
   },
   {
@@ -12195,17 +12195,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Q. 네이버 영화 랭킹 가져와서 전체 영화제목을 출력하세요."
+    "# Q2. 네이버 영화 랭킹 가져와서 전체 영화제목을 출력하세요."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6ffd7274",
+   "id": "6ead6235",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Q.\"http://api.aoikujira.com/time/get.php\"으로 부터 아래와 같이 출력하세요.\n",
+    "# Q3.\"http://api.aoikujira.com/time/get.php\"으로 부터 아래와 같이 출력하세요.\n",
     "# 2020/08/02 08:06:45\n",
     "# b'2020/08/02 08:06:45'"
    ]
@@ -12213,17 +12213,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c1b5d6ff",
+   "id": "ec9e3db3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Q.\"http://naver.com\"에서 header의 요소들을 가져와서 for문으로 출력하세요"
+    "# Q4.\"http://naver.com\"에서 header의 요소들을 가져와서 for문으로 출력하세요"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "490223bd",
+   "id": "4cc3085a",
    "metadata": {},
    "outputs": [
     {
@@ -15384,7 +15384,7 @@
     }
    ],
    "source": [
-    "# Q. 아래를 예외 처리하세요. \n",
+    "# Q5. 아래를 예외 처리하세요. \n",
     "import requests as rq\n",
     "\n",
     "url = \"naver.com\"\n",
@@ -15395,11 +15395,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7cbeca19",
+   "id": "c5181480",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Q. 아래 html에서 다음을 출력하세요.\n",
+    "# Q6. 아래 html에서 다음을 출력하세요.\n",
     "# [<p>파이썬 크롤러 책1</p>, <p>전문서적</p>, <p>정보 문화사</p>]\n",
     "# [<p>파이썬 크롤러 책1</p>, <p>전문서적</p>]\n",
     "\n",
@@ -15423,11 +15423,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "40858246",
+   "id": "e6d5a7f5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Q. 아래와 같이 출력하세요.\n",
+    "# Q7. 아래와 같이 출력하세요.\n",
     "# <title>Title</title>\n",
     "# <h2 id=\"target1\">h2 태그</h2>\n",
     "# <a href=\"/\" id=\"target2\">a 태그</a>"
@@ -15436,7 +15436,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f0dbb89d",
+   "id": "8c980e9b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15470,11 +15470,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13fbebca",
+   "id": "ea533347",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Q. 아래 html 문에서 다음과 같이 출력되도록 스크레이핑 하세요.\n",
+    "# Q8. 아래 html 문에서 다음과 같이 출력되도록 스크레이핑 하세요.\n",
     "\n",
     "h1 = HTML 기본 구조\n",
     "li = html5 명시\n",
@@ -15506,11 +15506,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "213a065e",
+   "id": "9eb3c08f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Q. 특정 웹사이트를 지정한 후 원하는 크롤링 만들기(최대한 역량 발휘)"
+    "# Q9. 특정 웹사이트를 지정한 후 원하는 크롤링 만들기(최대한 역량 발휘)"
    ]
   }
  ],
