--- a/web_crawling_기초_guide.ipynb
+++ b/web_crawling_기초_guide.ipynb
@@ -12158,7 +12158,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "f3d6dd12",
+   "id": "db747865",
    "metadata": {},
    "outputs": [
     {
@@ -12201,7 +12201,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6ead6235",
+   "id": "5aba57a5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12213,7 +12213,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ec9e3db3",
+   "id": "fb8dd7fb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12223,7 +12223,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "4cc3085a",
+   "id": "4ad5785a",
    "metadata": {},
    "outputs": [
     {
@@ -15395,12 +15395,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c5181480",
+   "id": "dcce2bd8",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Q6. 아래 html에서 다음을 출력하세요.\n",
-    "# [<p>파이썬 크롤러 책1</p>, <p>전문서적</p>, <p>정보 문화사</p>]\n",
+    "# [<p>파이썬 크롤러 책1</p>, <p>전문서적</p>, <p id=\"d\">정보 문화사</p>]\n",
+    "# [<p id=\"d\">정보 문화사</p>]\n",
     "# [<p>파이썬 크롤러 책1</p>, <p>전문서적</p>]\n",
     "\n",
     "\n",
@@ -15423,7 +15424,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e6d5a7f5",
+   "id": "5aed8f1e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15436,7 +15437,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8c980e9b",
+   "id": "1be45a5c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15470,7 +15471,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ea533347",
+   "id": "fedd6b98",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15506,11 +15507,184 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9eb3c08f",
+   "id": "548f3a67",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Q9. 특정 웹사이트를 지정한 후 원하는 크롤링 만들기(최대한 역량 발휘)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "880d06d8",
+   "metadata": {},
+   "source": [
+    "selenium 모듈\n",
+    "- 웹 어플리케이션 테스트를 위한 프레임워크 : 홈페이지 테스트용으로 사용\n",
+    "- 사용자가 아닌 프로그램이 웹 브라우저를 제어할 수 있도록 지원\n",
+    "- 웹 브라우저마다 클라이언트 프로그램(Web Driver)이 별도로 필요(웹 브라우저 <-> 프로그램간 통신 목적)\n",
+    "- 크롤링 보다는 웹을 제어하는 목적이 더 큼\n",
+    "- pip install selenium\n",
+    "- web driver 설치(크롬 버전 확인) : https://chromedriver.chromium.org/downloads\n",
+    "- 압축 해제한 후 chromedriver.exe를 적당한 경로로 이동\n",
+    "- selenium 모듈 호출 후 설치한 web driver 경로를 지정\n",
+    "\n",
+    "이벤트로 제어하기 : 브라우저를 직접 제어하기 때문에 직접 컨트롤하여 마우스 클릭, 키보드 입력, 자바 스크립트 이벤트 처리 가능\n",
+    "- 마우스 클릭 : click()\n",
+    "- 키보드 입력 : send_keys()\n",
+    "- 자바스크립트 삽입 : execute_script()\n",
+    "- 입력 양식 전송 : submit()\n",
+    "- 스크린샷 : screenshot(파일이름)\n",
+    "- 글자 지움 : clear()\n",
+    "- 뒤로 가기 : back()\n",
+    "- 앞으로 가기 : forward()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b42c6cbe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install selenium"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "216ad3c8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import selenium\n",
+    "from selenium import webdriver\n",
+    "\n",
+    "url = 'https://naver.com'\n",
+    "path = 'C:/tool/chromedriver.exe'\n",
+    "driver = webdriver.Chrome(path)\n",
+    "driver.get(url)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "b62e3150",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "driver.maximize_window()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "87d63719",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "driver.minimize_window()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "e47b75bb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'https://www.naver.com/'"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "driver.current_url"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "661b5290",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "driver.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b249156c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "셀레니움 함수\n",
+    "\n",
+    "\n",
+    "- find_element_by_id: id 속성을 사용하여 접근\n",
+    "- find_element(s)_by_class_name: 클래스를 사용하여 접근\n",
+    "- find_element(s)_by_name: name 속성을 사용하여 접근\n",
+    "- find_element(s)_by_xpath: xpath 속성을 사용하여 접근\n",
+    "- find_element(s)_by_link_text: 앵커태그(a 태그)에 사용되는 텍스트로 접근 \n",
+    "- find_element(s)_by_partial_link_text: 앵커태그(a 태그)에 사용되는 일부 텍스트로 접근\n",
+    "- find_element(s)_by_tag_name: 태그를 사용하여 접근\n",
+    "- find_element(s)_by_css_selector: CSS 선택자를 사용하여 접근"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "44420f09",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "빅 데이터 정의 | Oracle 대한민국\n",
+      "서울특별시 빅데이터 캠퍼스\n",
+      "빅데이터(big data) 이해 - 정의, 분석, 기술, 특징, 사례 연구\n",
+      "빅데이터란? | 고급 빅 데이터 분석 | SAP Insights\n",
+      "K-ICT 빅데이터센터\n",
+      "빅 데이터란 무엇인가 - 대한당뇨병학회\n"
+     ]
+    }
+   ],
+   "source": [
+    "from selenium import webdriver\n",
+    "from selenium.webdriver.common.keys import Keys\n",
+    "import time\n",
+    "\n",
+    "url = 'https://google.com'\n",
+    "driver = webdriver.Chrome('C:/tool/chromedriver.exe')\n",
+    "driver.get(url)\n",
+    "search_box = driver.find_element_by_xpath('/html/body/div[1]/div[3]/form/div[1]/div[1]/div[1]/div/div[2]/input')\n",
+    "search_box.send_keys('빅데이터')\n",
+    "search_box.send_keys(Keys.RETURN)\n",
+    "\n",
+    "elements = driver.find_elements_by_xpath('//*[@id=\"rso\"]/div/div/div/div/a/h3')\n",
+    "for e in elements:\n",
+    "    print(e.text)\n",
+    "    print(e.text, file=open('dataset/test_sel.txt', 'a',encoding='utf-8'))\n",
+    "time.sleep(3)\n",
+    "driver.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2a05b562",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 과제\n",
+    "# Q. 구글 검색에서 '이대역 맛집' 을 찾아 상위 10개만 출력 및 저장하세요.(Selenium 이용)"
    ]
   }
  ],
