--- a/web_crawling_기초_guide.ipynb
+++ b/web_crawling_기초_guide.ipynb
@@ -15516,7 +15516,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "55092caa",
+   "id": "c8ed8939",
    "metadata": {},
    "source": [
     "selenium 모듈\n",
@@ -15543,7 +15543,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "27c62594",
+   "id": "0627b9a0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15553,7 +15553,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "b164ac99",
+   "id": "9f3c7244",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15569,7 +15569,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "f14c96fd",
+   "id": "650a2d62",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15579,7 +15579,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "a363b952",
+   "id": "84b96568",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15589,7 +15589,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "e91b14ee",
+   "id": "605e9e2b",
    "metadata": {},
    "outputs": [
     {
@@ -15610,7 +15610,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6a5ae843",
+   "id": "0f4a0a68",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15620,7 +15620,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7b9d48ea",
+   "id": "5932ec63",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15640,7 +15640,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "2145fae9",
+   "id": "678b6b3c",
    "metadata": {},
    "outputs": [
     {
@@ -15679,7 +15679,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3fcfc0d9",
+   "id": "22a48f5a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15690,7 +15690,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "8ec9c97b",
+   "id": "b4cfd277",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15709,7 +15709,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "3b849ec7",
+   "id": "60b78e6b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15724,7 +15724,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "6682f521",
+   "id": "a1b041e3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15734,7 +15734,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "ba8a8067",
+   "id": "0e84547c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15747,7 +15747,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "1e021cc7",
+   "id": "694001e6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15760,7 +15760,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "150d51ce",
+   "id": "e68a8979",
    "metadata": {},
    "outputs": [
     {
@@ -15783,7 +15783,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "24aff627",
+   "id": "1c38dc4e",
    "metadata": {},
    "outputs": [
     {
@@ -15811,7 +15811,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "c6eac8ef",
+   "id": "51e468c9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15822,7 +15822,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "e49857e7",
+   "id": "33fc780a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15835,7 +15835,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "c87f31f2",
+   "id": "ef2480f0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15845,7 +15845,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "c2170fa9",
+   "id": "9c386346",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15858,7 +15858,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "c4dbd4e2",
+   "id": "641179f2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15868,7 +15868,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "ac48ea8f",
+   "id": "c6e7f217",
    "metadata": {},
    "outputs": [
     {
@@ -15890,7 +15890,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "9e910fc8",
+   "id": "1b855ee3",
    "metadata": {},
    "outputs": [
     {
@@ -15914,7 +15914,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "05c92856",
+   "id": "88a309c6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15925,7 +15925,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f7f2c02a",
+   "id": "13f99670",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15936,7 +15936,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "3d8e1c76",
+   "id": "6966baa8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15946,7 +15946,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "8fb6c7b2",
+   "id": "8de2bcea",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15960,7 +15960,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "26543e28",
+   "id": "bc9a34ac",
    "metadata": {},
    "outputs": [
     {
@@ -15983,7 +15983,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "4e94aa17",
+   "id": "85561f94",
    "metadata": {},
    "outputs": [
     {
@@ -16010,7 +16010,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "64bcc490",
+   "id": "e7b152f3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16021,7 +16021,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "4e4d9846",
+   "id": "15fce041",
    "metadata": {},
    "outputs": [
     {
@@ -16057,7 +16057,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "afe6adb6",
+   "id": "f28501b8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16072,7 +16072,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "32cb012b",
+   "id": "4dd56588",
    "metadata": {},
    "outputs": [
     {
@@ -16100,7 +16100,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "acc0019a",
+   "id": "9b3d963e",
    "metadata": {},
    "outputs": [
     {
@@ -19616,7 +19616,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "5503b6ef",
+   "id": "1756bbba",
    "metadata": {},
    "outputs": [
     {
@@ -22900,7 +22900,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "99754759",
+   "id": "cf721981",
    "metadata": {},
    "outputs": [
     {
@@ -22927,7 +22927,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "b2b5d491",
+   "id": "131b3e92",
    "metadata": {},
    "outputs": [
     {
@@ -22955,7 +22955,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "b430a40e",
+   "id": "9e73a68d",
    "metadata": {},
    "outputs": [
     {
@@ -22984,7 +22984,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "1849e99b",
+   "id": "abf8a92f",
    "metadata": {},
    "outputs": [
     {
@@ -23083,7 +23083,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "9717faa0",
+   "id": "7872e515",
    "metadata": {},
    "outputs": [
     {
@@ -23112,7 +23112,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "734cd457",
+   "id": "31cb0f29",
    "metadata": {},
    "outputs": [
     {
@@ -23154,18 +23154,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "febefb57",
+   "id": "99a06059",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 과제\n",
+    "# 과제 ( urllib > requests > selenium 순서로 해보세요)\n",
     "# Q. urllib + bs4로 네이버 사이트에서 뉴스 5개를 가져와서 출력하세요."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ffa59552",
+   "id": "aa4d8430",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23178,7 +23178,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0f780e6e",
+   "id": "23cb7d25",
    "metadata": {},
    "outputs": [],
    "source": [
