--- a/pandas_ 전처리_guide.ipynb
+++ b/pandas_ 전처리_guide.ipynb
@@ -138,7 +138,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3a2e95de",
+   "id": "31878723",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +148,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "f19c5d29",
+   "id": "caf88cb0",
    "metadata": {},
    "outputs": [
     {
@@ -171,7 +171,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "25a116fe",
+   "id": "690e02d3",
    "metadata": {},
    "outputs": [
     {
@@ -308,7 +308,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "01d383a5",
+   "id": "ee517000",
    "metadata": {},
    "outputs": [
     {
@@ -409,7 +409,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "b47c1ceb",
+   "id": "3825876f",
    "metadata": {},
    "outputs": [
     {
@@ -482,7 +482,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "2189e208",
+   "id": "4359a2ff",
    "metadata": {},
    "outputs": [
     {
@@ -554,7 +554,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e928c96f",
+   "id": "7f52f679",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -566,7 +566,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "0b366ad2",
+   "id": "d90cf5fd",
    "metadata": {},
    "outputs": [
     {
@@ -698,7 +698,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "f5b487d8",
+   "id": "c4d627ce",
    "metadata": {},
    "outputs": [
     {
@@ -837,7 +837,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "a615f26c",
+   "id": "0c9c8b8f",
    "metadata": {},
    "outputs": [
     {
@@ -969,7 +969,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "98685867",
+   "id": "122af2b4",
    "metadata": {},
    "outputs": [
     {
@@ -1102,7 +1102,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "a40fc6c2",
+   "id": "431c60ec",
    "metadata": {},
    "outputs": [
     {
@@ -1235,7 +1235,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "bbbd109b",
+   "id": "0a3305f2",
    "metadata": {},
    "outputs": [
     {
@@ -1389,7 +1389,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "560bf49c",
+   "id": "84e9e070",
    "metadata": {},
    "outputs": [
     {
@@ -1422,7 +1422,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "6c0e0069",
+   "id": "0b89fdc1",
    "metadata": {},
    "outputs": [
     {
@@ -1533,7 +1533,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "576cec19",
+   "id": "0add6a6e",
    "metadata": {},
    "outputs": [
     {
@@ -1567,7 +1567,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "199b4bf2",
+   "id": "5671d2ad",
    "metadata": {},
    "outputs": [
     {
@@ -1707,7 +1707,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "c409c830",
+   "id": "1ae14d56",
    "metadata": {},
    "outputs": [
     {
@@ -1788,7 +1788,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "c42e40ed",
+   "id": "bbd1b32d",
    "metadata": {},
    "outputs": [
     {
@@ -1813,7 +1813,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "be80c269",
+   "id": "b4ee9d98",
    "metadata": {},
    "outputs": [
     {
@@ -1890,7 +1890,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "e3f43770",
+   "id": "d9abdb38",
    "metadata": {},
    "outputs": [
     {
@@ -1971,7 +1971,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "6f1e0dc1",
+   "id": "420c9b67",
    "metadata": {},
    "outputs": [
     {
@@ -2053,7 +2053,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "970b7f98",
+   "id": "ab91ca29",
    "metadata": {},
    "outputs": [
     {
@@ -2140,7 +2140,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "81ea005c",
+   "id": "2ec3f4ca",
    "metadata": {},
    "outputs": [
     {
@@ -2227,7 +2227,7 @@
   {
    "cell_type": "code",
    "execution_count": 86,
-   "id": "3c5ab5c8",
+   "id": "c13b4f68",
    "metadata": {},
    "outputs": [
     {
@@ -2316,7 +2316,7 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "id": "fd506e3c",
+   "id": "11fcb5f4",
    "metadata": {},
    "outputs": [
     {
@@ -2404,7 +2404,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "3fd54dcc",
+   "id": "649a4b8a",
    "metadata": {},
    "outputs": [
     {
@@ -2490,7 +2490,7 @@
   {
    "cell_type": "code",
    "execution_count": 90,
-   "id": "43cb52fa",
+   "id": "4af452f9",
    "metadata": {},
    "outputs": [
     {
@@ -2577,7 +2577,7 @@
   {
    "cell_type": "code",
    "execution_count": 92,
-   "id": "b3294b40",
+   "id": "1d6fac42",
    "metadata": {},
    "outputs": [
     {
@@ -2693,7 +2693,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "b69d4d47",
+   "id": "496a8938",
    "metadata": {},
    "outputs": [
     {
@@ -2779,7 +2779,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "f7d0fa2a",
+   "id": "c5954e7b",
    "metadata": {},
    "outputs": [
     {
@@ -2841,7 +2841,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "ccf807ff",
+   "id": "0b9f2b47",
    "metadata": {},
    "outputs": [
     {
@@ -2903,7 +2903,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "1b10b7f8",
+   "id": "9229f02d",
    "metadata": {},
    "outputs": [
     {
@@ -2985,7 +2985,7 @@
   {
    "cell_type": "code",
    "execution_count": 100,
-   "id": "ff016a78",
+   "id": "1dfaa051",
    "metadata": {},
    "outputs": [
     {
@@ -3051,7 +3051,7 @@
   {
    "cell_type": "code",
    "execution_count": 101,
-   "id": "a42aa7db",
+   "id": "b1c2ed2e",
    "metadata": {},
    "outputs": [
     {
@@ -3088,7 +3088,7 @@
   {
    "cell_type": "code",
    "execution_count": 106,
-   "id": "277d1cf2",
+   "id": "168913ea",
    "metadata": {},
    "outputs": [
     {
@@ -3243,7 +3243,7 @@
   {
    "cell_type": "code",
    "execution_count": 105,
-   "id": "abc1557b",
+   "id": "820b4e13",
    "metadata": {},
    "outputs": [
     {
@@ -3365,7 +3365,7 @@
   {
    "cell_type": "code",
    "execution_count": 113,
-   "id": "4cb20447",
+   "id": "c4aaa64a",
    "metadata": {},
    "outputs": [
     {
@@ -3459,7 +3459,7 @@
   {
    "cell_type": "code",
    "execution_count": 114,
-   "id": "ecdce8cf",
+   "id": "fd56e6f2",
    "metadata": {},
    "outputs": [
     {
@@ -3557,7 +3557,7 @@
   {
    "cell_type": "code",
    "execution_count": 116,
-   "id": "8f1a44d2",
+   "id": "f30715c3",
    "metadata": {},
    "outputs": [
     {
@@ -3672,7 +3672,7 @@
   {
    "cell_type": "code",
    "execution_count": 118,
-   "id": "e1a367e2",
+   "id": "16a90762",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3683,7 +3683,7 @@
   {
    "cell_type": "code",
    "execution_count": 121,
-   "id": "45e3857c",
+   "id": "4a21a9ac",
    "metadata": {},
    "outputs": [
     {
@@ -3793,7 +3793,7 @@
   {
    "cell_type": "code",
    "execution_count": 122,
-   "id": "921ed123",
+   "id": "025a2bee",
    "metadata": {},
    "outputs": [
     {
@@ -3914,7 +3914,7 @@
   {
    "cell_type": "code",
    "execution_count": 123,
-   "id": "ce156edf",
+   "id": "23a3e598",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3925,7 +3925,7 @@
   {
    "cell_type": "code",
    "execution_count": 124,
-   "id": "3d030a51",
+   "id": "f7285a1c",
    "metadata": {},
    "outputs": [
     {
@@ -4046,7 +4046,7 @@
   {
    "cell_type": "code",
    "execution_count": 125,
-   "id": "45b7c4ac",
+   "id": "92c294bb",
    "metadata": {},
    "outputs": [
     {
@@ -4180,7 +4180,7 @@
   {
    "cell_type": "code",
    "execution_count": 126,
-   "id": "96a83eb3",
+   "id": "8a6a95ec",
    "metadata": {},
    "outputs": [
     {
@@ -4307,7 +4307,7 @@
   {
    "cell_type": "code",
    "execution_count": 128,
-   "id": "efe96aa4",
+   "id": "042bf303",
    "metadata": {},
    "outputs": [
     {
@@ -4400,7 +4400,7 @@
   {
    "cell_type": "code",
    "execution_count": 129,
-   "id": "2b0963c8",
+   "id": "7d17e26c",
    "metadata": {},
    "outputs": [
     {
@@ -4424,7 +4424,7 @@
   {
    "cell_type": "code",
    "execution_count": 132,
-   "id": "ade1644a",
+   "id": "5958c707",
    "metadata": {},
    "outputs": [
     {
@@ -4451,7 +4451,7 @@
   {
    "cell_type": "code",
    "execution_count": 133,
-   "id": "55f54d96",
+   "id": "4ff2780d",
    "metadata": {},
    "outputs": [
     {
@@ -4552,7 +4552,7 @@
   {
    "cell_type": "code",
    "execution_count": 134,
-   "id": "539160cc",
+   "id": "4ff85afb",
    "metadata": {},
    "outputs": [
     {
@@ -4660,7 +4660,7 @@
   {
    "cell_type": "code",
    "execution_count": 141,
-   "id": "81bdb999",
+   "id": "9fcacb22",
    "metadata": {},
    "outputs": [
     {
@@ -4732,6 +4732,7 @@
     }
    ],
    "source": [
+    "# 과제\n",
     "# Q1. index를 기준으로 3개 그룹으로 구분하여 a:평균, b:최대값, c:합계를 \n",
     "# 각각 계산하여 출력하세요.\n",
     "d_g = df.groupby('index').mean()\n",
@@ -4741,7 +4742,7 @@
   {
    "cell_type": "code",
    "execution_count": 142,
-   "id": "568bfdd5",
+   "id": "08f42210",
    "metadata": {},
    "outputs": [
     {
@@ -4878,6 +4879,7 @@
     }
    ],
    "source": [
+    "# 과제\n",
     "# Q2. deck 열의 NaN 갯수를 계산하세요.\n",
     "import seaborn as sns\n",
     "titanic_df = sns.load_dataset('titanic')\n",
@@ -4887,29 +4889,31 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e5bd578f",
+   "id": "bb8a3d74",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# 과제\n",
     "# Q3. titanic_df의 처음 5개 행에서 null 값을 찾아 출력하세요.(True, False로)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3b7d57cd",
+   "id": "872a6485",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# 과제\n",
     "# Q4. titanic_df의 각 칼럼별 null의 갯수를 for 반복문을 사용해서 구한 후 \n",
-    "# 출력하세요.\n",
-    "# (missing_count는 예외 처리하고 처리 방식은 0을 출력함)"
+    "# 출력하세요. (missing_count는 예외 처리하고 처리 방식은 0을 출력함 \n",
+    "# - null 값이 없으면 0  )"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 143,
-   "id": "e36231a8",
+   "id": "eb6d68d5",
    "metadata": {},
    "outputs": [
     {
@@ -5031,6 +5035,7 @@
     }
    ],
    "source": [
+    "# 과제\n",
     "# Q5. 'mpg'를 'kpl' 로 환산하여 새로운 열을 생성하고 처음 3개 행을 소수점 아래 \n",
     "# 둘째 자리에서 반올림하여 출력하세요.\n",
     "import pandas as pd\n",
@@ -5041,10 +5046,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e4d23f26",
+   "id": "4dda6a9c",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# 과제\n",
     "# Q6. titanic_df 데이터 셋을 전처리하고 탐색하여 데이터 셋에 대한 설명 및\n",
     "# 분석 과제를 기술하세요 (전처리 최소 5개 이상) "
    ]
