--- a/pandas_날짜_guide.ipynb
+++ b/pandas_날짜_guide.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "b6e6ecd5",
+   "id": "e1d91b4a",
    "metadata": {},
    "source": [
     "python, numpy, pandas 날짜 타입 비교 및 정리\n",
@@ -12,7 +12,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "340704a7",
+   "id": "6cf7b6d2",
    "metadata": {},
    "outputs": [
     {
@@ -37,7 +37,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "9fcaede6",
+   "id": "90f3341d",
    "metadata": {},
    "outputs": [
     {
@@ -62,7 +62,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "99be330c",
+   "id": "e2c9addf",
    "metadata": {},
    "outputs": [
     {
@@ -84,7 +84,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "6c2a5003",
+   "id": "12245ebb",
    "metadata": {},
    "outputs": [
     {
@@ -105,7 +105,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "d64c5a95",
+   "id": "5f5fd3f6",
    "metadata": {},
    "outputs": [
     {
@@ -125,7 +125,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "cfc043b6",
+   "id": "ad2c1ae2",
    "metadata": {},
    "outputs": [
     {
@@ -148,7 +148,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "9bbb8c99",
+   "id": "e5dc041c",
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +170,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "7a63ee7e",
+   "id": "4c8ec9a5",
    "metadata": {},
    "outputs": [
     {
@@ -205,7 +205,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "5795e17a",
+   "id": "885bcb5d",
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +230,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "ad1c51bd",
+   "id": "a37d566a",
    "metadata": {},
    "outputs": [
     {
@@ -256,7 +256,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "2fc4952a",
+   "id": "2a1e8c56",
    "metadata": {},
    "outputs": [
     {
@@ -276,7 +276,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "bc1af96e",
+   "id": "f7a69067",
    "metadata": {},
    "outputs": [
     {
@@ -380,7 +380,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "1cd78357",
+   "id": "8099cb81",
    "metadata": {},
    "outputs": [
     {
@@ -410,7 +410,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "fd85ad72",
+   "id": "48ac62ee",
    "metadata": {},
    "outputs": [
     {
@@ -442,7 +442,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "9f7f8570",
+   "id": "25d8fa11",
    "metadata": {},
    "outputs": [
     {
@@ -567,7 +567,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "0f313977",
+   "id": "c3542e68",
    "metadata": {},
    "outputs": [
     {
@@ -695,7 +695,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "45e4803f",
+   "id": "d680b13d",
    "metadata": {},
    "outputs": [
     {
@@ -721,7 +721,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "47c1ff99",
+   "id": "00b58bf2",
    "metadata": {},
    "outputs": [
     {
@@ -837,7 +837,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "da336d78",
+   "id": "2bb3de64",
    "metadata": {},
    "outputs": [
     {
@@ -899,7 +899,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "9ee06b6d",
+   "id": "01234296",
    "metadata": {},
    "outputs": [
     {
@@ -934,7 +934,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "b86a8171",
+   "id": "50d28c40",
    "metadata": {},
    "outputs": [
     {
@@ -957,7 +957,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "0b02182c",
+   "id": "f324fe1b",
    "metadata": {},
    "outputs": [
     {
@@ -981,7 +981,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "175dad37",
+   "id": "1a3b01d5",
    "metadata": {},
    "outputs": [
     {
@@ -1008,7 +1008,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "c40307e0",
+   "id": "b6da6e3b",
    "metadata": {},
    "outputs": [
     {
@@ -1029,7 +1029,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "79288012",
+   "id": "d1deb244",
    "metadata": {},
    "outputs": [
     {
@@ -1052,7 +1052,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "98d658e7",
+   "id": "2186cda2",
    "metadata": {},
    "outputs": [
     {
@@ -1082,7 +1082,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "b5d52500",
+   "id": "4cc7cac3",
    "metadata": {},
    "outputs": [
     {
@@ -1114,7 +1114,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "a00b9c31",
+   "id": "ef445624",
    "metadata": {},
    "outputs": [
     {
@@ -1140,7 +1140,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "bbce3ef5",
+   "id": "249def11",
    "metadata": {},
    "outputs": [
     {
@@ -1165,7 +1165,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "fdbfc61f",
+   "id": "ff64961c",
    "metadata": {},
    "outputs": [
     {
@@ -1192,7 +1192,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "3bb8834e",
+   "id": "6a37bfc8",
    "metadata": {},
    "outputs": [
     {
@@ -1215,7 +1215,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "7c5ea331",
+   "id": "c2550439",
    "metadata": {},
    "outputs": [
     {
@@ -1237,7 +1237,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "60a939ab",
+   "id": "d4046a04",
    "metadata": {},
    "outputs": [
     {
@@ -1262,7 +1262,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "d06aee4c",
+   "id": "18aaec91",
    "metadata": {},
    "outputs": [
     {
@@ -1296,7 +1296,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "2b12f4b4",
+   "id": "2f676665",
    "metadata": {},
    "outputs": [
     {
@@ -1322,7 +1322,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "b841f1dc",
+   "id": "7c40f111",
    "metadata": {},
    "outputs": [
     {
@@ -1344,7 +1344,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1aaeff1b",
+   "id": "b4ab99f4",
    "metadata": {},
    "source": [
     "freq 매개변수에 사용되는 Frequncy strings\n",
@@ -1367,7 +1367,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "556fc05c",
+   "id": "539a4a57",
    "metadata": {},
    "outputs": [
     {
@@ -1412,7 +1412,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "51fef366",
+   "id": "f929864d",
    "metadata": {},
    "outputs": [
     {
@@ -1520,7 +1520,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "0ab229b5",
+   "id": "e60a92f8",
    "metadata": {},
    "outputs": [
     {
@@ -1549,7 +1549,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "a90af01d",
+   "id": "e9305539",
    "metadata": {},
    "outputs": [
     {
@@ -1570,7 +1570,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "21ccac1b",
+   "id": "b8d74b45",
    "metadata": {},
    "outputs": [
     {
@@ -1591,7 +1591,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "cde2f9e8",
+   "id": "c7ba1b4d",
    "metadata": {},
    "outputs": [
     {
@@ -1615,7 +1615,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "8d9eceb8",
+   "id": "8f4fda76",
    "metadata": {},
    "outputs": [
     {
@@ -1651,7 +1651,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "2c42b223",
+   "id": "d650ccf2",
    "metadata": {},
    "outputs": [
     {
@@ -1681,7 +1681,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "92ef60d2",
+   "id": "63a635ad",
    "metadata": {},
    "outputs": [
     {
@@ -1703,7 +1703,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "0ff7ee04",
+   "id": "2a6dc8b3",
    "metadata": {},
    "outputs": [
     {
@@ -1729,7 +1729,7 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "id": "d8f58d4b",
+   "id": "ed919edf",
    "metadata": {},
    "outputs": [
     {
@@ -1755,7 +1755,7 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "id": "2c00e1fb",
+   "id": "31405675",
    "metadata": {},
    "outputs": [
     {
@@ -1778,7 +1778,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "d830021a",
+   "id": "7c91e3a3",
    "metadata": {},
    "outputs": [
     {
@@ -1808,7 +1808,19 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "936577d5",
+   "id": "b02cfc0f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ts = pd.Series(np.random.randn(20),\n",
+    "               index=pd.date_range('1/15/2000', periods=20, freq='4d'))\n",
+    "print(ts)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b4f3914f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1819,7 +1831,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0cd56910",
+   "id": "0ac1fc93",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1830,7 +1842,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9724c975",
+   "id": "f4222c30",
    "metadata": {},
    "outputs": [],
    "source": [
